Remove last unimplemented! in test path.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ errno = "0.2"
 failure = "0.1"
 failure_derive = "0.1"
 libc = "0.2"
+strum = "0.9"
+strum_macros = "0.9"
 
 [build-dependencies]
 bindgen = "0.26"
