--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,12 @@ errno = "0.2"
 failure = "0.1"
 failure_derive = "0.1"
 libc = "0.2"
+log = "0.4"
 strum = "0.9"
 strum_macros = "0.9"
+
+[dev-dependencies]
+env_logger = "0.5"
 
 [build-dependencies]
 bindgen = "0.26"
