--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ failure_derive = "0.1"
 libc = "0.2"
 log = "0.4"
 nix = "0.10"
+serde = "1"
+serde_derive = "1"
 strum = "0.9"
 strum_macros = "0.9"
 
