--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ authors = ["Adam Perry <adam.n.perry@gmail.com>"]
 license = "MIT"
 
 [dependencies]
+bitflags = "1.0.3"
 failure = "0.1"
 failure_derive = "0.1"
 libc = "0.2"
 log = "0.4"
+mmap = "0.1"
+mio = "0.6"
 nix = "0.10"
+page_size = "0.4"
 serde = "1"
 serde_derive = "1"
 strum = "0.9"
@@ -19,4 +23,4 @@ strum_macros = "0.9"
 env_logger = "0.5"
 
 [build-dependencies]
-bindgen = "0.26"
+bindgen = "0.37"
