--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT"
 
 [dependencies]
 bitflags = "1.0.3"
+enum_primitive = "0.1"
 failure = "0.1"
 failure_derive = "0.1"
 libc = "0.2"
@@ -13,11 +14,14 @@ log = "0.4"
 mmap = "0.1"
 mio = "0.6"
 nix = "0.10"
+num = "0.2"
 page_size = "0.4"
 serde = "1"
 serde_derive = "1"
 strum = "0.9"
 strum_macros = "0.9"
+futures = "0.1"
+tokio = "0.1"
 
 [dev-dependencies]
 env_logger = "0.5"
