--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ strum = "0.9"
 strum_macros = "0.9"
 futures = "0.1"
 tokio = "0.1"
+tokio-codec = "0.1.0"
 
 [dev-dependencies]
 env_logger = "0.5"
