--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT"
 
 [dependencies]
 bitflags = "1.0.3"
+bytes = "0.4"
 enum_primitive = "0.1"
 failure = "0.1"
 failure_derive = "0.1"
@@ -22,7 +23,7 @@ strum = "0.9"
 strum_macros = "0.9"
 futures = "0.1"
 tokio = "0.1"
-tokio-codec = "0.1.0"
+tokio-codec = "0.1"
 
 [dev-dependencies]
 env_logger = "0.5"
