--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 [dependencies]
 bitflags = "1.0.3"
 bytes = "0.4"
+crossbeam-channel = "0.2"
 enum_primitive = "0.1"
 failure = "0.1"
 failure_derive = "0.1"
